Fix: Simplify CORS configuration by removing environment variable dependency and hardcoding allowed origins